tests/spec/type_errors/try_outside_fn.soc
// SPEC §3.6 (v0.2): `?` propagates by returning from the enclosing function,
// so it is an error at the top level (E0328), including inside top-level
// control flow — only fn and lambda bodies count.
//? error: E0328
//? error: `?` outside of a function
let x = Some(1);
let y = x?;
